# crowd_evac

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
assets/scenarios/: lecture_hall.json
docs/: PRD-extension.md  PRD.md  calibration_report_r03.md  plan_phase_1.md  plan_phase_2.md
scripts/: bench_render.py  bench_sim_headless.py  bench_sim_render.py  optimize_weights.py  sensitivity.py  validate_weights.py
src/crowd_evac/: __init__.py  __main__.py
src/crowd_evac/adapters/: __init__.py
src/crowd_evac/adapters/io/: __init__.py  scenario_loader.py
src/crowd_evac/adapters/render/: __init__.py  arcade_input.py  arcade_renderer.py  spike.py
src/crowd_evac/application/: __init__.py  cli.py  injection.py  rng.py  simulation.py  termination.py
src/crowd_evac/assets/: __init__.py
src/crowd_evac/assets/scenarios/: bottleneck_corridor.json  fixture_minimal.json  hazard_lecture_hall.json  lecture_hall.json  lecture_hall_small.json  open_room_search.json
src/crowd_evac/domain/: __init__.py  agent_state.py  collision.py  constants.py  errors.py  exit_model.py  floor_plan.py  forces.py  integrator.py  overlap.py  panic_field.py  panic_source.py  params.py  spatial_hash.py
src/crowd_evac/metrics/: __init__.py  records.py
src/crowd_evac/optimization/: __init__.py  fitness.py  harness.py  nsga.py  realism.py  select.py  space.py  stuck.py  suite.py
src/crowd_evac/pathfinding/: __init__.py  flow_field.py
src/crowd_evac/ports/: __init__.py  clock.py  input_source.py  renderer.py  scenario_repository.py
src/crowd_evac/scenarios/: __init__.py  schema.py
tests/: __init__.py  conftest.py  test_ports.py
tests/crowd_evac/: __init__.py
tests/crowd_evac/adapters/: __init__.py
tests/crowd_evac/adapters/io/: __init__.py  test_scenario_loader.py
tests/crowd_evac/adapters/render/: __init__.py  test_arcade_input.py  test_arcade_renderer.py  test_spike.py
tests/crowd_evac/application/: __init__.py  test_cli.py  test_injection.py  test_rng.py  test_simulation.py  test_termination.py
tests/crowd_evac/domain/: __init__.py  conftest.py  test_agent_state.py  test_collision.py  test_compose.py  test_constants.py  test_errors.py  test_exit_model.py  test_floor_plan.py  test_forces.py  test_forces_crowd.py  test_integrator.py  test_overlap.py  test_panic_field.py  test_panic_source.py  test_spatial_hash.py
tests/crowd_evac/metrics/: test_records.py
tests/crowd_evac/pathfinding/: __init__.py  test_flow_field.py
tests/crowd_evac/performance/: __init__.py  conftest.py  test_perf_headless.py
tests/crowd_evac/scenarios/: __init__.py  test_schema.py
tests/e2e/: __init__.py  test_end_to_end.py
tests/optimization/: test_fitness.py  test_fitness_perf.py  test_harness.py  test_nsga.py  test_params.py  test_realism.py  test_select.py  test_shipping.py  test_space.py  test_stuck.py  test_suite.py  test_suite_perf.py
