[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crowd-evac"
version = "0.1.0"
description = "Real-time 2D crowd-evacuation game with NumPy simulation core"
readme = "README.md"
license = "MIT"
# Upper bound excludes 3.14: arcade pins pymunk~=6.9.0, which has no 3.14
# wheel and won't compile without MSVC. Tested on 3.12.10.
requires-python = ">=3.11,<3.14"
authors = [
    {name = "Sam Herby", email = "herbysam0@gmail.com"},
]

dependencies = [
    "numpy>=2.0.0,<3.0",
    "arcade>=3.3.3,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "mypy>=1.5.0",
    "flake8>=6.1.0",
]

[project.scripts]
crowd-evac = "crowd_evac.application.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = {include = ["crowd_evac*"]}

[tool.setuptools.package-data]
crowd_evac = ["py.typed", "assets/scenarios/*.json"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by Black)
    "W503",  # line break before binary operator
]
exclude = [
    ".venv",
    "__pycache__",
    ".git",
    ".pytest_cache",
    "build",
    "dist",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
markers = [
    "perf: performance / load tests — excluded from CI by default (run with -m perf)",
    "render: tests that open a real arcade window (require a display; run with -m render)",
]
filterwarnings = [
    # Third-party (pyglet, pulled in by arcade) uses a CPython API deprecated
    # for removal in 3.19. Not our code and not fixable here; ignore only this
    # exact message so our own warnings still surface.
    "ignore:.*ctypes._pointer_type_cache.* is deprecated:DeprecationWarning",
]
